tests/toy/neg/000930_mutation.toylang
program a = { if a if sleep; } .
